--- a/css/module-10.css
+++ b/css/module-10.css
@@ -1,9 +1,37 @@
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
 }
 
 h1 {
   color: purple;
   background-color: aqua;
+}
+
+.js-set {
+  background-color: greenyellow;
+}
+
+.js-clear {
+  background-color: tomato;
+}
+
+.js-set:hover {
+  background-color: rgb(112, 185, 1);
+  cursor: pointer;
+}
+
+.js-clear:hover {
+  background-color: rgb(185, 32, 5);
+  cursor: pointer;
 }
